WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249220
[iOS] Crash in ProcessThrottler::sendPrepareToSuspendIPC
https://bugs.webkit.org/show_bug.cgi?id=249220
Summary
[iOS] Crash in ProcessThrottler::sendPrepareToSuspendIPC
Miguel Salinas
Reported
2022-12-13 06:02:29 PST
ProcessThrottler::updateThrottleStateIfNeeded may call ProcessThrottler::sendPrepareToSuspendIPC before the last pending request to suspend has been invalidated which trips up a release assert.
Attachments
Add attachment
proposed patch, testcase, etc.
Miguel Salinas
Comment 1
2022-12-13 06:03:09 PST
rdar://103276264
Miguel Salinas
Comment 2
2022-12-13 06:08:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7546
EWS
Comment 3
2022-12-14 05:38:54 PST
Committed
257850@main
(9bdfab144ce0): <
https://commits.webkit.org/257850@main
> Reviewed commits have been landed. Closing PR #7546 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug