Cherry-pick 9bdfab144ce0. rdar://problem/103276264

[iOS] Fix crash in ProcessThrottler::sendPrepareToSuspendIPC
    https://bugs.webkit.org/show_bug.cgi?id=249220
    rdar://103276264

    Reviewed by Chris Dumez.

    After 257628@main we call `ProcessThrottler::updateThrottleStateIfNeeded`
    every time we call `ProcessThrottler::setShouldTakeSuspendedAssertion`.
    Instead, we should only take or drop the Suspended assertion when actually
    needed in `ProcessThrottler::setShouldTakeSuspendedAssertion`.

    * Source/WebKit/UIProcess/ProcessThrottler.cpp:
    (WebKit::ProcessThrottler::setShouldTakeSuspendedAssertion):

    Canonical link: https://commits.webkit.org/257850@main

Canonical link: https://commits.webkit.org/257698.5@safari-7615.1.15-branch